--- a/index.html
+++ b/index.html
@@ -54,6 +54,9 @@
                 </tr>
 
             </table>
+            <article align="middle">
+                <a href="D:\html\mywebsite\index1.html">blockchain</a>
+            </article>
         </article>
         <article id="internship">
             <h2>INTERNSHIP</h2>
@@ -148,7 +151,6 @@
     corrupti, earum veniam sed nostrum rerum cum consectetur debitis labore inventore animi enim assumenda pariatur
     laudantium. Natus amet aspernatur labore explicabo, illum quidem molestias in esse modi dicta consectetur ullam
     repudiandae laudantium provident culpa odio nobis, architecto voluptates suscipit repellendus recusandae. Aliquam!
-
     <hr>
 
     <footer>
