--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
 
             </table>
             <article align="middle">
-                <a href="D:\html\mywebsite\index1.html">blockchain</a>
+                <a href="index1.html">blockchain</a>
             </article>
         </article>
         <article id="internship">
