--- a/index.html
+++ b/index.html
@@ -13,7 +13,9 @@
     <table>
         <tr>
             <td>
-                <img width="300" src="D:\html\mywebsite\image\image\yogesh.jpg" alt="picture of jogeswar panda">
+                <img width="300" srcset="D:\html\mywebsite\image\image\yogeshsmall.jpg" 
+                src="D:\html\mywebsite\image\image\yogesh.jpg"
+                alt="picture of jogeswar panda">
             </td>
             <td>
                 <h1>Jogeswar panda</h1>
