--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <table>
         <tr>
             <td>
-                <img width="300" srcset="D:\html\mywebsite\image\image\yogeshsmall.jpg" 
+                <img width="300" srcset="D:\html\mywebsite\image\image\yogeshsmall.jpg 1x" 
                 src="D:\html\mywebsite\image\image\yogesh.jpg"
                 alt="picture of jogeswar panda">
             </td>
